# MineiroCursos

./: .env  cursos.db  database.py  hello.py  pyproject.toml  testdb.py  teste.py  testes.py
