[project]
name = "gdrive-encaminhador"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "pymongo>=4.10.1",
    "pytelegrambotapi>=4.26.0",
    "python-decouple>=3.8",
    "tinydb>=4.8.2",
]
